fixed an issue where text height is too small cutting the letters in references added a feature to see the url when hovering over links

--- a/src/components/Page/Dependency/Navigator/page/Reference.module.css
+++ b/src/components/Page/Dependency/Navigator/page/Reference.module.css
@@ -2,16 +2,18 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 20px;
+	overflow: hidden;
 }
 .innerContainer {
 	display: flex;
 	flex-direction: column;
 }
 .container a {
-	color: #f0f0f0;
+	/*color: #f0f0f0;*/
 	font-size: 12px;
 	font-style: normal;
 	font-weight: 400;
-	line-height: 8px;
+	line-height: 20px;
 	text-decoration-line: underline;
+	position: relative;
 }
