--- a/src/components/UI/InformationTabs/InformationTabs.module.css
+++ b/src/components/UI/InformationTabs/InformationTabs.module.css
@@ -51,6 +51,8 @@ ul.bulletList li {
 	color: white;
 	font-family: 'Arial', sans-serif;
 	margin-bottom: 10px;
+	display: flex;
+	align-items: center;
 }
 
 h6 {
@@ -74,7 +76,7 @@ ul {
 }
 
 ol {
-	list-style-type: disc;
+	list-style-type: decimal;
 	margin-left: 20px;
 }
 li {
@@ -163,15 +165,47 @@ pre {
 	border: 1px solid #ddd;
 	overflow-x: auto;
 }
+p > a {
+	--text-link-decoration: underline;
+	text-decoration: var(--text-link-decoration);
+}
 a {
-	font-size: 14px;
+	font-size: 12px;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	text-decoration: underline;
 	word-break: keep-all;
 	width: auto;
-	display: inline-block;
-	margin: 6px;
-	padding: 5px 10px;
+	position: relative;
+}
+a.tooltip-wrapper {
+	position: relative;
+}
+a:hover::after {
+	content: attr(href);
+	position: absolute;
+	left: 0;
+	top: 100%;
+	background: #333;
+	color: #fff;
+	padding: 5px;
+	border-radius: 3px;
+	white-space: nowrap;
+	z-index: 10;
+	font-size: 12px;
+	margin-top: 5px;
+}
+a:hover::before {
+	content: '';
+	position: absolute;
+	left: 50%;
+	top: 100%;
+	transform: translateX(-50%);
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 5px solid #333;
+	margin-top: 1px;
 }
